fix: blog items invisible - pass data deps to animation hook

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -379,7 +379,7 @@ footer p {
   box-sizing: border-box;
 }
 #home .about {
-  margin-bottom: 35px;
+  margin-bottom: 15px;
 }
 #home .profile-picture {
   max-width: 140px;
